--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         <article class="card" id="project">
             <h4>Python App</h4>
-            <iframe src="https://replit.com/@ngasseutaffou/Weather-App-Demo#main.py?embed=true" ></iframe>
+            <iframe src="https://replit.com/@ngasseutaffou/Weather-App-Demo?embed=true" ></iframe>
         </article>
 
         <article class="card">
