Applied some basics  stylings and CV visibilty

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about-me">About</a>
             <a href="#skills">Skills</a>
             <a href="#project">Projects</a>
-            <a href="./Ngasseu Taffou_CV.pdf">MyCV</a>
+            <a href="./Ngasseu Taffou_CV_1.pdf">MyCV</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -36,7 +36,7 @@
             <article class="welcome">
                 <h2><span class="greeting">W</span>elcome</h2>
                 <p>
-                    <span class="hello">H</span>ello! <span class="name">Ngasseu Taffou</span>, <span class="role">Junior Full-Stack Developer</span> based in South London. Dedicated on producing good looking websites.</p>
+                    <span class="hello">H</span>ello! <span class="name">Ngasseu Taffou</span>, <span class="role">Full-Stack Developer</span> based in South London. Dedicated on producing good looking websites.</p>
                 <p>
                     Software Engineer with a degree in <span class="education">Computer Science with Artificial Intelligence</span>. Reading about ancients civilisations 
                     and enjoying board games are my hobbies that consolidate my innovative mindset.
